# bazel-broken-dep

./: .bazelrc  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel  cargo-bazel-lock.json
