load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test", "rust_test_suite")

rust_binary(
    name = "bazel-broken-dep",
    srcs = glob(include = ["src/*.rs"]),
    aliases = aliases(),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    )
)

rust_test(
    name = "bazel-broken-dep-test",
    crate = ":bazel-broken-dep",
)
